# dnit-pdf-extractor

./: .gitignore  CLAUDE.md  pyproject.toml  requirements.txt
.claude/rules/: architecture.md  backend.md  deployment.md  frontend.md
app/: config.py  main.py
app/dashboard/: __init__.py  callbacks.py  data_loader.py  layout.py
app/models/: job.py
app/routers/: jobs.py  upload.py
app/services/: exceptions.py  extractor.py  file_processor.py  job_manager.py  number_parser.py  ocr_extractor.py  pdf_classifier.py  storage.py
app/static/css/: style.css
app/static/js/: script.js
app/templates/: base.html  index.html
tests/: conftest.py  pdf_factory.py  test_extractor.py  test_index.py  test_upload.py
